--- a/src/components/CardComponent.css
+++ b/src/components/CardComponent.css
@@ -2,6 +2,8 @@
     border-radius: 25%;
     object-fit: cover;
     height: 150px;
+    width: 100px;
+    flex-wrap: wrap;
 }
 
 .col {
@@ -14,4 +16,12 @@
 .gallery {
     display: flex;
     align-items: center;
+}
+
+.moodCard :hover {
+    background-color: blue;
+}
+
+.moodCard {
+    background-color: white;
 }
