small color fix

--- a/src/components/CardComponent.css
+++ b/src/components/CardComponent.css
@@ -24,7 +24,7 @@
 }
 
 .moodCard {
-    background-color: chocolate;
+    background-color: pink;
 }
 
 .moodCard img {
@@ -58,7 +58,7 @@ h3 {
 }
 
 body {
-    background-color: darkolivegreen;
+    background-color: lightgray;
 }
 
 .href {
